Fix regression: Add to Home Screen button is unreadable
Regression introduced in commit https://github.com/miniflux/v2/commit/ea58bac5489cd71f898312132f6e8d7b42cb4d33

--- a/internal/ui/static/css/common.css
+++ b/internal/ui/static/css/common.css
@@ -242,6 +242,8 @@ a:hover {
     text-decoration: none;
     line-height: 30px;
     color: #fff;
+    background-color: transparent;
+    border: 0;
 }
 
 #btn-add-to-home-screen:hover {
